Revision history for perl distribution DBIx-TempDB

0.08 Not Released
 - Allow execute of multiple statements by SQLite driver #6

0.07 2015-09-20T09:40:22+0200
 - Use URI::db instead of Mojo::URL #4
   Contributor: Dan Book
 - Fix duplicate "CREATE DATABASE x" statements fail less
 - Add warning when DBIX_TEMP_DB_KEEP_DATABASE is set

0.06 2015-09-18T14:52:06+0200
 - Add support for DBIX_TEMP_DB_KEEP_DATABASE=1

0.05 2015-09-18T14:00:30+0200
 - Add support for SQLite

0.04 2015-09-18T11:50:41+0200
 - Add support for "template"
 - Add drop_from_child=2, which monitor parent with a double forked process
 - Fix max length for database name is 63 characters (Pg=63, MySQL=64)

0.03 2015-09-17T21:59:16+0200
 - Add support for "drop_from_child"

0.02 2015-09-17T20:02:12+0200
 - Fix depending on DBI
 - Add create_database() sets DBIX_TEMP_DB_URL
 - Add support for calling dsn() as a class method
 - Add execute()
 - Add execute_file()

0.01 2015-09-17T19:12:10+0200
 - Can make temp database for postgresql
 - Can make temp database for mysql