@@ -1,6 +1,8 @@
 Revision history for perl distribution DBIx-TempDB
 
 0.08 Not Released
+ - Add support for custom "create_database_command"
+ - Add support for custom "drop_database_command"
  - Allow execute of multiple statements by SQLite driver #6
 
 0.07 2015-09-20T09:40:22+0200
